# macXterm

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
assets/icon/: macxterm.icns  macxterm.rc  preview_page.html  preview_page_body.html
docs/: BUILD.md  BUILD.zh.md  DESIGN.md  DESIGN.zh.md  MANUAL.zh.md  USER_GUIDE.md  USER_GUIDE.zh.md  WINDOWS_SPRINT.md
i18n/: macxterm_ja.ts  macxterm_zh_CN.ts  macxterm_zh_TW.ts
scripts/: build.ps1  build.sh  coverage.sh  linux-build.sh  live-sshd.sh  push-github.sh  rdp-fixture.sh  verify-linux.sh
scripts/win/: build-check.sh  build-libssh.ps1  build-libvterm.ps1  conpty_check.cpp  fetch-userland.ps1  macxterm.nsi  package.ps1
src/: CMakeLists.txt
src/connect/: FtpConnection.cpp  FtpConnection.h  HostKey.cpp  HostKey.h  IConnection.cpp  IConnection.h  LocalShellConnection.cpp  LocalShellConnection.h  MoshConnection.cpp  MoshConnection.h  RdpConnection.cpp  RdpConnection.h  RfbProtocol.cpp  RfbProtocol.h  SerialConnection.cpp  SerialConnection.h  SimpleTcpConnection.cpp  SimpleTcpConnection.h  SshConnection.cpp  SshConnection.h  TelnetConnection.cpp  TelnetConnection.h  TelnetProtocol.cpp  TelnetProtocol.h  VncConnection.cpp  VncConnection.h  XdmcpConnection.cpp  XdmcpConnection.h  XdmcpProtocol.cpp  XdmcpProtocol.h
src/core/: CliOptions.cpp  CliOptions.h  CredentialVault.cpp  CredentialVault.h  CygPath.cpp  CygPath.h  IniStore.cpp  IniStore.h  InputBroadcaster.h  Macro.cpp  Macro.h  PuttyImporter.cpp  PuttyImporter.h  Session.cpp  Session.h  SessionForm.cpp  SessionForm.h  SessionTree.cpp  SessionTree.h  Settings.cpp  Settings.h  ShortcutRegistry.cpp  ShortcutRegistry.h  SshConfigImporter.cpp  SshConfigImporter.h  Store.cpp  Store.h  TerminalConfig.cpp  TerminalConfig.h  WinScpImporter.cpp  WinScpImporter.h
src/i18n/: LanguageManager.cpp  LanguageManager.h
src/platform/: Net.cpp  Net.h  Pty.cpp  Pty.h  WinIntegration.cpp  WinIntegration.h
src/sftp/: FtpClient.cpp  FtpClient.h  IRemoteFs.h  RemotePath.cpp  RemotePath.h  RemoteTransfer.cpp  RemoteTransfer.h  SftpConnection.cpp  SftpConnection.h  SftpEntry.cpp  SftpEntry.h
src/term/: ColorScheme.cpp  ColorScheme.h  ScreenBuffer.cpp  ScreenBuffer.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  VtEngine.cpp  VtEngine.h
src/tools/: AwsSigV4.cpp  AwsSigV4.h  CronExpr.cpp  CronExpr.h  CronServer.cpp  CronServer.h  FolderDiff.cpp  FolderDiff.h  FtpCommand.cpp  FtpCommand.h  FtpServer.cpp  FtpServer.h  HttpServer.cpp  HttpServer.h  NetProbe.cpp  NetProbe.h  NfsServer.cpp  NfsServer.h  PacketCapture.cpp  PacketCapture.h  PortScanner.cpp  PortScanner.h  RemoteMonitor.cpp  RemoteMonitor.h  S3Client.cpp  S3Client.h  SshExec.cpp  SshExec.h  SshServer.cpp  SshServer.h  Subnet.cpp  Subnet.h  TelnetServer.cpp  TelnetServer.h  TextDiff.cpp  TextDiff.h  TftpPacket.cpp  TftpPacket.h  TftpServer.cpp  TftpServer.h  (+2 more)
src/tunnel/: LocalForwarder.cpp  LocalForwarder.h  Socks.cpp  Socks.h  SshTunnel.cpp  SshTunnel.h  Tunnel.cpp  Tunnel.h  TunnelForm.cpp  TunnelForm.h
src/ui/: BrowserTab.cpp  BrowserTab.h  ColorSchemeDialog.cpp  ColorSchemeDialog.h  FolderDiffDialog.cpp  FolderDiffDialog.h  GlyphIcon.h  ImageViewerDialog.cpp  ImageViewerDialog.h  KeyGenDialog.cpp  KeyGenDialog.h  MainWindow.cpp  MainWindow.h  PacketCaptureDialog.cpp  PacketCaptureDialog.h  PortScannerDialog.cpp  PortScannerDialog.h  RdpSurfaceWidget.cpp  RdpSurfaceWidget.h  RemoteMonitorBar.cpp  RemoteMonitorBar.h  ServersDialog.cpp  ServersDialog.h  SessionDialog.cpp  SessionDialog.h  SettingsDialog.cpp  SettingsDialog.h  SftpPanel.cpp  SftpPanel.h  TerminalWidget.cpp  TerminalWidget.h  TextEditorDialog.cpp  TextEditorDialog.h  TunnelDialog.cpp  TunnelDialog.h  VaultDialog.cpp  VaultDialog.h  main.cpp
src/x11/: X11Display.cpp  X11Display.h  X11Server.cpp  X11Server.h
tests/: CMakeLists.txt  test_awssigv4.cpp  test_broadcaster.cpp  test_cjk_probe.cpp  test_cli.cpp  test_colorscheme.cpp  test_cronexpr.cpp  test_cronserver.cpp  test_cygpath.cpp  test_folderdiff.cpp  test_forwarder.cpp  test_ftp.cpp  test_ftpbrowser.cpp  test_ftpclient.cpp  test_ftpserver.cpp  test_highlighter.cpp  test_hostkey.cpp  test_httpserver.cpp  test_ini.cpp  test_locale.cpp  test_localshell.cpp  test_macro.cpp  test_monitor.cpp  test_mosh.cpp  test_netprobe.cpp  test_nfs.cpp  test_osc.cpp  test_packetcapture.cpp  test_packetdecode.cpp  test_portscanner.cpp  test_pty.cpp  test_puttyimport.cpp  test_rdp.cpp  test_rdp_live.cpp  test_remotepath.cpp  test_rfb.cpp  test_rfb_zrle.cpp  test_s3.cpp  test_screenbuffer.cpp  test_scrollback.cpp  (+35 more)
tests/fixtures/: docker-compose.yml  sshserver_fixture.cpp
